# AIMS

./: .gitignore  init_data.py  main.py  pyproject.toml  requirements_clean.txt
alembic/: env.py
alembic/versions/: 0fe2495e09a9_delete_token_from_ding_user.py  b7d92a8d50f9_init_model.py
core/: auth.py  cache.py  dingtalk.py  mail.py  single.py
core/email_bot/: bot.py  imap_client.py  models.py  parser.py  smtp_client.py  test.py
dependencies/: __init__.py
models/: __init__.py  candidate.py  interview.py  positions.py  user.py
repository/: candidate_repo.py  position_repo.py  user_repo.py
routers/: candidate_router.py  position_router.py  user_router.py
schemas/: __init__.py  cache_schema.py  candidate_schema.py  position_schema.py  user_schema.py
settings/: __init__.py
tasks/: __init__.py
