[project]
name = "hr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic==1.18.4",
    "apscheduler>=3.11.2",
    "asttokens==3.0.1",
    "charset-normalizer==3.4.7",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "distro==1.9.0",
    "executing==2.2.1",
    "fastapi-cache2-fork>=0.3.0", # 使用兼容 Python 3.13 的分叉版本
    "fastapi-cloud-cli==0.17.1",
    "fastapi-mail>=1.6.4",
    "fastar==0.11.0",
    "greenlet==3.5.0",
    "ipykernel==7.2.0",
    "ipython==8.39.0",
    "jedi==0.20.0",
    "jiter==0.14.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.1",
    "langchain-protocol==0.0.15",
    "langgraph==1.2.0",
    "langgraph-checkpoint==4.1.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.3.14",
    "langsmith==0.8.4",
    "loguru>=0.7.3",
    "mako==1.3.12",
    "matplotlib-inline==0.2.2",
    "nest-asyncio==1.6.0",
    "openai==2.37.0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "parso==0.8.7",
    "pillow>=12.2.0",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "psycopg-pool==3.3.1",
    "pure-eval==0.2.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "python-dateutil==2.9.0.post0",
    "python-multipart>=0.0.29",
    "pywin32>=311",
    "pyzmq==27.1.0",
    "redis>=5.0.0", # 现代 Redis 客户端，兼容 Python 3.13
    "regex==2026.5.9",
    "requests==2.34.1",
    "requests-toolbelt==1.0.0",
    "rignore==0.7.6",
    "sentry-sdk==2.60.0",
    "shortuuid>=1.0.13",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uuid-utils==0.15.0",
    "wcwidth==0.7.0",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
